# C-web-framework-core

./: .gitignore  CMakeLists.txt  INSTALL.md  README.md
apps/: CMakeLists.txt
apps/migrate/: CMakeLists.txt  main.c
apps/server/: CMakeLists.txt  main.c
cmake/: FindIDN2.cmake  FindSQLite.cmake  FindUNISTRING.cmake  cpdy.cmake  cwfr.cmake
framework/database/: CMakeLists.txt  database.c  database.h  db.h  dbquery.c  dbquery.h  dbresult.c  dbresult.h  mysql.c  mysql.h  postgresql.c  postgresql.h  redis.c  redis.h  sqlite.c  sqlite.h  statement_registry.c  statement_registry.h
framework/middleware/: CMakeLists.txt  middleware.c  middleware.h  middleware_registry.c  middleware_registry.h
framework/model/: CMakeLists.txt  mfield.h  model.c  model.h  model_internal.h  model_legacy.h  mparams.h  mquery.h  mschema.h
framework/query/: CMakeLists.txt  query.c  query.h  queryparser.c  queryparser.h
framework/session/: CMakeLists.txt  aes256gcm.c  aes256gcm.h  session.c  session.h  sessiondb.c  sessiondb.h  sessionfile.c  sessionredis.c
framework/storage/: CMakeLists.txt  storagefs.c  storages3.c  storages3.h
framework/taskmanager/: CMakeLists.txt  scheduled_task.c  scheduled_task.h  taskmanager.c  taskmanager.h  taskmanager_calc.c
framework/translation/: CMakeLists.txt  translation.c  translation.h
framework/view/: CMakeLists.txt  README.md  view.c  view.h  viewcommon.c  viewcommon.h  viewexpr.c  viewexpr.h  viewparser.c  viewparser.h  viewstore.c
framework_shared/: CMakeLists.txt  cpdy_framework.c  cwfr_framework.c
libs/broadcast/: broadcast.c
libs/client/: httpclient.c  httpclient.h  httpclientparser.c  httpclientparser.h
libs/config/: appconfig.h
libs/connection/: connection.h  connection_c.c  connection_c.h  (+4 more)
misc/: CMakeLists.txt  array.c  array.h  base64.c  bufferdata.c  bufo.c  bufo.h  cqueue.c  cqueue.h  file.c  file.h  gzip.c  gzip.h  hashmap.c  hashmap.h  helpers.c  helpers.h  i18n.c  i18n.h  idn_utils.c  idn_utils.h  json.c  json.h  json2.c  jwt.c  jwt.h  log.c  log.h  map.c  map.h  query.c  query.h  queryparser.c  queryparser.h  random.c  random.h  sha256.c  sha256.h  str.c  str.h  (+8 more)
protocols/: CMakeLists.txt
protocols/http/: CMakeLists.txt  http.h  http1common.c  http1common.h  http1parsercommon.h  http1request.c  http1request.h  http1response.c  http1response.h  httpcommon.c  httpcommon.h  httpcontext.h  httpparsercommon.c  httpparsercommon.h  httppayload.c  httppayload.h  httprequest.c  httprequest.h  httpresponse.c  httpresponse.h
protocols/http/client/: CMakeLists.txt  http1clienthandlers.c  http1clienthandlers.h  httpclient.c  httpclient.h  httpclienthandlers.c  httpclienthandlers.h  httpclienthandlers_async.c  httpclienthandlers_async.h  httpclientpool.c  httpclientpool.h
protocols/http/client/parsers/: CMakeLists.txt  http1responseparser.c  http1responseparser.h  http1teparser.c  http1teparser.h  httpclientparser.c  httpclientparser.h  httpresponseparser.c  httpresponseparser.h  httpteparser.c  httpteparser.h
protocols/http/server/: CMakeLists.txt  http1serverhandlers.c  http1serverhandlers.h  httpserverhandlers.c  httpserverhandlers.h
protocols/http/server/filters/: CMakeLists.txt  http_chunked_filter.c  http_chunked_filter.h  http_data_filter.c  http_data_filter.h  http_filter.c  http_filter.h  http_gzip_filter.c  http_gzip_filter.h  http_not_modified_filter.c  http_not_modified_filter.h  http_range_filter.c  http_range_filter.h  http_write_filter.c  http_write_filter.h
protocols/http/server/parsers/: CMakeLists.txt  cookieparser.c  cookieparser.h  formdataparser.c  formdataparser.h  http1requestparser.c  http1requestparser.h  httprequestparser.c  httprequestparser.h  multipartparser.c  multipartparser.h  urlencodedparser.c  urlencodedparser.h
protocols/http/server/redirect/: CMakeLists.txt  redirect.c  redirect.h
protocols/smtp/: CMakeLists.txt  dkim.c  dkimcanonparser.c  dkimheaderparser.c  mail.c  mail.h  smtprequest.c  smtpresponse.c
protocols/smtp/client/: CMakeLists.txt  smtpclienthandlers.c  smtpclienthandlers.h
protocols/smtp/client/parsers/: CMakeLists.txt  smtpresponseparser.c  smtpresponseparser.h
protocols/websocket/: CMakeLists.txt  websocketscommon.h  websocketsprotocoldefault.c  websocketsprotocoldefault.h  websocketsprotocolresource.c  websocketsprotocolresource.h  websocketsrequest.c  websocketsrequest.h  websocketsresponse.c  websocketsresponse.h  websocketsswitch.c  websocketsswitch.h  ws.h  ws_deflate.c  ws_deflate.h  ws_utf8.h  wscontext.h
protocols/websocket/server/: CMakeLists.txt  websockets.c  websocketsserverhandlers.c  websocketsserverhandlers.h
protocols/websocket/server/parsers/: CMakeLists.txt  websocketsparser.c  websocketsparser.h
src/moduleloader/: CMakeLists.txt  moduleloader.c  moduleloader.h
tests/: CMakeLists.txt  README.md  framework.h  httprequestparser_stubs.c  readme.md  runner.c  test_array.c  test_bufo.c  test_file.c  test_httprequestparser.c  test_httprequestparser_dumb_fuzzing.c  test_httprequestparser_smart_fuzzing.c  test_json.c  test_session.c  test_str.c  test_taskmanager.c
tests/core/: framework.h  testdb.c  testdb.h
tests/db/: runner.c  test_config.json  test_db_example.__  test_db_model.c  test_db_mysql.c  test_db_query_null.c  test_db_redis.c  test_db_sqlite.c
tests/unit/: httpclient_stubs.c  mail_stubs.c  runner.c  test_array.c  test_base64.c  test_broadcast.c  test_bufferdata.c  test_bufo.c  test_connection.c  test_cookieparser.c  test_cqueue.c  test_dkim.c  test_dkimcanonparser.c  test_dkimheaderparser.c  test_domain.c  test_file.c  test_formdataparser.c  test_helpers.c  test_http_chunked_filter.c  test_http_data_filter.c  test_http_gzip_filter.c  test_http_not_modified_filter.c  test_http_range_filter.c  test_http_write_filter.c  test_httpclient.c  test_httpclienthandlers.c  test_httpclientparser.c  test_httpclientpool.c  test_httpcommon.c  test_httppayload.c  test_httprequest.c  test_httprequestparser.c  test_httpresponse.c  test_httpresponseparser.c  test_i18n.c  test_json.c  test_mail.c  test_middleware.c  test_model.c  test_model_timestamp.c  (+25 more)
(+123 files in other folders)
